# recsys

./: .gitignore  Drug_rating.ipynb  README.md  Untitled.ipynb  database.py  gds.py  get_rec.hurl  graph_database.py  model.py  preprocessing_text.ipynb  pyproject.toml  recsys.hurl  recsys2.hurl  requirements.txt  server.py  store_data_neo4j.py  store_data_qdrant.py  test_neo4j.py
Data/: DrugRating.csv  cleaned_products_data.csv  fakeData.csv  guardian_fake_data.csv  products.csv
app/: database.py  drugrating_process.py  graph_database.py  model.py  server.py
test/: add_product.hurl  get_embeddings.hurl  get_products.hurl  get_rec.hurl  healthcheck.hurl
vectordb/: chroma.sqlite3
